Removed Action postfix

--- a/templates/emails/registration.html.twig
+++ b/templates/emails/registration.html.twig
@@ -4,7 +4,7 @@
 Hi {{ name }}! You're successfully registered.
 
 {# example, assuming you have a route named "login" #}
-To login, go to: <a href="{{ url('login') }}">...</a>.
+To login, go to: <a href="{{ url('fos_user_security_login') }}">...</a>.
 
 Thanks!
 
